[package]
name = "rs-simple"
version = "0.1.0"
authors = ["Toni Uhlig <toni@impl.cc>"]
edition = "2024"

[dependencies]
argh = "0.1"
bytes = "1"
crossterm = "0.29.0"
io = "0.0.2"
moka = { version = "0.12.10", features = ["future"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tui = "0.19.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
